# hackathon-mvp

./: .gitignore  AVALIACAO.md  CLAUDE.md  README.md  TUTORIAL.md  ficha_avaliacao_hackathon.xlsx  main.py  pyproject.toml  ~$ficha_avaliacao_hackathon.xlsx
app/: config.py  database.py
app/models/: __init__.py  dataset.py  experiment.py  trained_model.py
app/routers/: __init__.py  datasets.py  experiments.py  models.py  predictions.py
app/schemas/: __init__.py  dataset.py  experiment.py
app/services/: __init__.py  classical_timeseries.py  prediction.py  preprocessing.py  timeseries_preprocessing.py  training.py
data/: house_prices.csv  titanic.csv
datasets-avaliacao/: analise_datasets.ipynb  download_datasets.py  gerar_splits.py
datasets-avaliacao/classificacao/: adult_census_funcionalidade.csv  adult_census_performance.csv
datasets-avaliacao/regressao/: california_housing_funcionalidade.csv  california_housing_performance.csv
docs/: APRESENTACAO.md  Hackathon 2026 V2.pptx  Hackathon 2026.pptx  index.html  index.pptx
migrations/: add_timeseries_columns.py
static/: app.js  style.css
templates/: base.html  batch.html  dataset_detail.html  datasets.html  experiment_detail.html  experiment_new.html  experiments.html  index.html  upload.html
